--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "qunitjs": "1.23.1",
     "requirejs": "2.2.0",
     "sinon": "1.17.3",
-    "sizzle": "skuid/sizzle#skuid-12.0.0-v2-2.3.3.2",
+    "sizzle": "github:skuid/sizzle#sk-2.3.3.3",
     "strip-json-comments": "2.0.1",
     "testswarm": "1.1.0"
   },
